# search-openclaw

./: CONTRIBUTING.md  README.md  pyproject.toml  test.sh
docs/: faq.md  github-about.md  search-routes.md  web-search.md  wechat-launch-article.html
scripts/: install.sh  start.sh
search_openclaw/: __init__.py  cli.py  config.py  core.py  doctor.py  search.py  social_scrape.py
search_openclaw/channels/: __init__.py  base.py  brave_search.py  exa_search.py  github.py  iflow.py  multi_search.py  perplexity.py  tavily_search.py  web.py
search_openclaw/skill/: SKILL.md
search_openclaw/social/: __init__.py  browser_config.py  login_x.py  reporting.py  x_keyword_search.py  zhihu_helpers.py  zhihu_keyword_search.py
tests/: test_channels.py  test_cli.py  test_config.py  test_doctor.py  test_search.py  test_social_scrape.py
